--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,7 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Signika+Negative:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nova+Mono&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Signika+Negative:wght@300..700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Gamja+Flower&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nova+Mono&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Signika+Negative:wght@300..700&display=swap");
 @font-face {
   font-family: IRANSans;
   font-style: normal;
@@ -41,7 +45,6 @@
   --border-color: #ddd;
   --border-color-light: #f2f2f2;
   --light-body-bg: #F6EFEE;
-  --dark-body-bg: #221E22;
   --dark-card-color: #0D0C12;
   --border-radius-small: 5px;
   --border-radius-medium: 10px;
@@ -50,6 +53,8 @@
   --box-shadow-medium: 0 0 20px rgba(0, 0, 0, 0.1);
   --box-shadow-large: 0 0 30px rgba(0, 0, 0, 0.1);
   --sec-padding: 5rem 0;
+  --darkmode-bg-color: #0E0E0E;
+  --darkmode-text-color: #dac5a7;
 }
 
 * {
@@ -112,7 +117,7 @@ a {
 }
 
 a:hover {
-  color: var(--link-hover-color);
+  color: var(--darkmode-text-color);
 }
 
 ul, li {
@@ -123,14 +128,145 @@ img {
   width: 100%;
 }
 
+.loga-transition {
+  transition: all 0.3s ease-in-out;
+}
+
 body {
-  background: var(--light-body-color);
-  color: var(--dark-color);
+  background-color: var(--darkmode-bg-color);
+  color: var(--darkmode-text-color);
   font-family: IRANSans, sans-serif;
   font-size: 14px;
   line-height: 1.5;
   direction: rtl;
   text-align: right;
+}
+
+.header {
+  width: 100%;
+  position: fixed;
+  top: 2rem;
+  display: flex;
+  justify-content: center;
+  z-index: 9999;
+}
+.header .navbar {
+  background: rgba(218, 197, 167, 0.05);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(30px);
+  -webkit-backdrop-filter: blur(30px);
+  border: 1px solid rgba(218, 197, 167, 0.15);
+}
+.header .navbar .navbar-brand {
+  font-family: "Gamja Flower", sans-serif;
+  font-weight: 500;
+  color: var(--darkmode-text-color);
+  padding: 0;
+  font-size: 1.85rem;
+}
+.header .navbar-nav .nav-link {
+  position: relative;
+  color: var(--darkmode-text-color);
+  padding: 2px;
+  margin: 0 5px;
+}
+.header .navbar-nav .nav-linkactive {
+  color: var(--darkmode-text-color);
+}
+.header .navbar-nav .nav-link:after {
+  background: none repeat scroll 0 0 transparent;
+  bottom: 0;
+  content: "";
+  display: block;
+  height: 1px;
+  left: 0;
+  position: absolute;
+  background: var(--darkmode-text-color);
+  transition: width 0.3s ease 0s, left 0.3s ease 0s;
+  width: 0;
+}
+.header .navbar-nav .nav-link:hover:after {
+  width: 100%;
+}
+
+.header .navbar-nav {
+  align-items: center;
+}
+.header .navbar-nav .nav-link.loga-btn {
+  background-color: var(--darkmode-text-color);
+  color: var(--darkmode-bg-color);
+  padding: 0.5rem 1rem;
+  border-radius: 2px;
+}
+
+.loga-bg {
+  width: 100%;
+  height: 100%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+}
+
+.hero-banner {
+  height: 150vh;
+  width: 100%;
+}
+.hero-banner .loga-bg {
+  background-image: url("../img/hero-bg.jpeg");
+}
+
+.hero-content-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 100%;
+}
+.hero-content-wrapper .hero-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 60%;
+  text-align: center;
+}
+.hero-content-wrapper .hero-content h1 {
+  direction: ltr;
+  font-size: 6rem;
+  line-height: 1;
+  text-align: center;
+  font-family: "Playfair Display", serif;
+  letter-spacing: 5px;
+  margin-bottom: 2rem;
+}
+.hero-content-wrapper .hero-content p {
+  font-size: 1.25rem;
+  width: 70%;
+  margin-bottom: 4rem;
+  font-family: "Nova Mono", monospace;
+}
+.hero-content-wrapper .hero-content .slide-down {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.hero-content-wrapper .hero-content .slide-down i {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 1rem;
+  border-radius: 50%;
+  background: rgba(218, 197, 167, 0.05);
+  border: 1px solid rgba(218, 197, 167, 0.15);
+}
+.hero-content-wrapper .hero-content .slide-down:hover i {
+  background: rgba(218, 197, 167, 0.15);
+  border: 1px solid rgba(218, 197, 167, 0.25);
+}
+
+.strong-tiṯle {
+  font-size: 2.5rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
