--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -52,9 +52,13 @@
   --box-shadow-small: 0 0 10px rgba(0, 0, 0, 0.1);
   --box-shadow-medium: 0 0 20px rgba(0, 0, 0, 0.1);
   --box-shadow-large: 0 0 30px rgba(0, 0, 0, 0.1);
-  --sec-padding: 5rem 0;
+  --sec-padding: 5rem 48px;
+  --body-font-size: 16px;
   --darkmode-bg-color: #0E0E0E;
   --darkmode-text-color: #dac5a7;
+  --darkmode-bg-card: rgba(218, 197, 167, 0.05);
+  --darkmode-border-color-card: rgba(218, 197, 167, 0.15);
+  --darkmode-border-radius-card: 2px;
 }
 
 * {
@@ -140,6 +144,27 @@ body {
   line-height: 1.5;
   direction: rtl;
   text-align: right;
+}
+
+.loga-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.loga-links i {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 1rem;
+  border-radius: 50%;
+  background: rgba(218, 197, 167, 0.05);
+  border: 1px solid rgba(218, 197, 167, 0.15);
+}
+.loga-links:hover i {
+  background: rgba(218, 197, 167, 0.15);
+  border: 1px solid rgba(218, 197, 167, 0.25);
 }
 
 .header {
@@ -244,29 +269,44 @@ body {
   margin-bottom: 4rem;
   font-family: "Nova Mono", monospace;
 }
-.hero-content-wrapper .hero-content .slide-down {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.hero-content-wrapper .hero-content .slide-down i {
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-right: 1rem;
-  border-radius: 50%;
-  background: rgba(218, 197, 167, 0.05);
-  border: 1px solid rgba(218, 197, 167, 0.15);
-}
-.hero-content-wrapper .hero-content .slide-down:hover i {
-  background: rgba(218, 197, 167, 0.15);
-  border: 1px solid rgba(218, 197, 167, 0.25);
-}
 
 .strong-tiṯle {
   font-size: 2.5rem;
+}
+
+.services {
+  padding: var(--sec-padding);
+}
+.services .services-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 35px;
+}
+.services .service-card {
+  height: min-content;
+  padding: 48px;
+  background-color: var(--darkmode-bg-card);
+  border: 1px solid var(--darkmode-border-color-card);
+  border-radius: var(--darkmode-border-radius-card);
+  text-align: left;
+}
+.services .service-card p {
+  line-height: 160%;
+  font-size: var(--body-font-size);
+  direction: ltr;
+  font-family: "Nova Mono", monospace;
+}
+
+.service-card .service-btn {
+  justify-content: flex-end;
+  margin: 2rem 0 0;
+}
+.service-card .service-btn i {
+  transform: rotate(-45deg);
+}
+.service-card .service-btn:hover i {
+  transform: rotate(0);
 }
 
 /*# sourceMappingURL=styles.css.map */
