--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -71,10 +71,15 @@
 	--box-shadow-medium: #{$box-shadow-medium};
 	--box-shadow-large: #{$box-shadow-large};
     --sec-padding: #{$sec-padding};
+    --body-font-size: #{$body-font-size};
 
     //dark mode
     --darkmode-bg-color: #{$darkmode-bg-color};
     --darkmode-text-color: #{$darkmode-text-color};
+
+    --darkmode-bg-card: #{$darkmode-bg-card};
+    --darkmode-border-color-card: #{$darkmode-border-color-card};
+    --darkmode-border-radius-card: #{$darkmode-border-radius-card};
 }
 
 
@@ -165,6 +170,30 @@ body{
     line-height: 1.5;
     direction: rtl;
     text-align: right;
+}
+
+
+.loga-links{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    i{
+        width: 40px;
+        height: 40px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-right: 1rem;
+        border-radius: 50%;
+        background: rgba(218, 197, 167, .05);
+        border: 1px solid rgba(218, 197, 167, .15);
+    }
+    &:hover{
+        i{
+            background: rgba(218, 197, 167, .15);
+            border: 1px solid rgba(218, 197, 167, .25)
+        }
+    }
 }
 
 .header{
@@ -270,31 +299,49 @@ body{
             margin-bottom: 4rem;
             font-family: "Nova Mono", monospace;
         }
-        .slide-down{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            i{
-                width: 40px;
-                height: 40px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                margin-right: 1rem;
-                border-radius: 50%;
-                background: rgba(218, 197, 167, .05);
-                border: 1px solid rgba(218, 197, 167, .15);
-            }
-            &:hover{
-                i{
-                    background: rgba(218, 197, 167, .15);
-                    border: 1px solid rgba(218, 197, 167, .25)
-                }
-            }
-        }
     }
 }
 
 .strong-tiṯle{
     font-size: 2.5rem
+}
+
+
+
+//services section
+.services{
+    padding: var(--sec-padding);
+    .services-wrapper{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        gap: 35px;
+    }
+    .service-card{
+        height: min-content;
+        padding: 48px;
+        background-color: var(--darkmode-bg-card);
+        border: 1px solid var(--darkmode-border-color-card);
+        border-radius: var(--darkmode-border-radius-card);
+        text-align: left;
+        p{
+            line-height: 160%;
+            font-size: var(--body-font-size);
+            direction: ltr;
+            font-family: "Nova Mono", monospace;
+        }
+    }
+}
+
+.service-card{
+    .service-btn{
+        justify-content: flex-end;
+        margin: 2rem 0 0;
+        i{
+            transform: rotate(-45deg);
+        }
+        &:hover i{
+            transform: rotate(0);
+        }
+    }
 }
