--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -180,12 +180,11 @@ body{
     background-color: var(--darkmode-bg-card);
     border: 1px solid var(--darkmode-border-color-card);
     border-radius: var(--darkmode-border-radius-card);
-    text-align: left;
+    
     p{
         line-height: 160%;
         font-size: var(--body-font-size);
-        direction: ltr;
-        font-family: "Nova Mono", monospace;
+        
     }
 }
 
@@ -312,7 +311,7 @@ body{
         width: 60%;
         text-align: center;
         h1{
-            direction: ltr;
+            
             font-size: 6rem;
             line-height: 1;
             text-align: center;
@@ -324,7 +323,6 @@ body{
             font-size: 1.25rem;
             width: 70%;
             margin-bottom: 4rem;
-            font-family: "Nova Mono", monospace;
         }
     }
 }
@@ -435,7 +433,7 @@ body{
         width: 60%;
         text-align: center;
         h1{
-            direction: ltr;
+            
             font-size: 6rem;
             line-height: 1;
             text-align: center;
@@ -449,7 +447,6 @@ body{
                 width: 70%;
                 margin: auto;
                 margin-bottom: 4rem;
-                font-family: "Nova Mono", monospace;
             }
         }
     }
@@ -489,6 +486,15 @@ body{
             width: 46%;
             float: left;
             position: relative;
+            .subtitle{
+                font-size: 1rem;
+                margin-bottom: .25rem;
+            }
+            .title{
+                font-size: 1.5rem;
+                font-weight: 600;
+                margin-bottom: .5rem;
+            }
         }
 }
 
@@ -595,14 +601,25 @@ body{
 .faq{
     padding: var(--sec-padding);
 }
-.faq-wrapper{
-    display: flex;
+.faq-wrapper{ 
+    display: grid;
+    grid-template-columns: repeat(2, minmax(0, 1fr));
     gap: 32px;
     justify-content: space-between;
     align-items: flex-start;
-}
-.faq-accordion-wrapper{
-    width: 50%;
+    .faq-title{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        h3{
+            font-size: 2rem;
+        }
+        p{
+            font-size: 1.2rem;
+            text-align: justify;
+        }
+    }
 }
 .logato-accordion{
     .accordion-item.loga-card{
@@ -613,6 +630,7 @@ body{
             width: 100%;
             position: relative;
             padding: 2rem;
+            text-align: right;
             span{
                 width: 85%;
             }
@@ -636,6 +654,7 @@ body{
         }
         .accordion-body{
             padding: 0 2rem;
+            margin-bottom: 1rem;
         }
     }
 }
@@ -652,4 +671,37 @@ body{
 //footer section
 .footer{
     padding: var(--sec-padding);
+}
+.footer-wrapper{
+    display: flex;
+    justify-content: space-around;
+    .footer-logo-social{
+        .footer-logo{
+            a{
+                font-size: 4rem;
+                display: flex;
+                justify-content: center;
+                font-weight: 700;
+                font-family: "Gamja Flower", sans-serif;
+            }
+        }
+        .footer-social{
+            display: flex;
+            justify-content: space-evenly;
+            a{
+                font-size: 3rem;
+            }
+        }
+    }
+}
+.logato-copyright{
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-top: 1px solid var(--darkmode-border-color-card);
+    margin-top: 2rem;
+    p{
+        margin: 0;
+    }
 }
